--- a/FrontEnd/teste.html
+++ b/FrontEnd/teste.html
@@ -5,51 +5,52 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Primeira página</title>
         <style>
-            body{
-                background-color: #000000;
-                color: #ffffff
+            .flex {
+                display: flex;
             }
-            h2{
-                font-size: 32px;
-                color: red;
-            }
-            .red {
-                color: red;                
+            .item {
+                width: 80px;
+                height: 80px;
+                background-color: blueviolet;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                margin: 10px;
+                padding: 10px;
             }
 
-            #email {
-                border:0;
-                background-color: #569876;
-                width: 100%;
-                height: 52px;
-                font-size: 42px;
-                color: white;
+            .item:hover {
+                background-color: #ff0000;
+                cursor: progress;
             }
+
+            .item:first-child:hover,
+            .item:last-child:hover {
+                background-color: #00ee00;
+            }
+
+            input:focus {
+                color: #ff0000;
+                background: #cccccc;
+            }
+
         </style>
     </head>
     <body>
-        <header>
-            <h1>H1</h1>
-        </header>
-        <section>
-            <form action="">
-                <div>
-                    <label for="">Nome:</label>
-                    <br>
-                    <input type="email" id="email" name="email" />
-                </div>
-                <br>
-                <div>
-                    <label for="msg">Mensagem:</label>
-                    <br>
-                    <textarea name="mensagem" id="msg"></textarea>
-                </div>
-                <br>
-                <div>
-                    <button>Enviar</button>
-                </div>
-            </form>
-        </section>
+        <hr>
+        <h2>Flexbox</h2>
+        <div class="flex">
+            <div class="item">a</div>
+            <div class="item">b</div>
+            <div class="item">b</div>
+            <div class="item">b</div>
+            <div class="item">c</div>
+        </div>
+        <div>
+            <input type="text">
+        </div>
+
         
     </body>
 </html>
